--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <version>3.4.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.4</version>
+            <scope>runtime</scope>
+        </dependency>		
     </dependencies>
     <dependencyManagement>
         <dependencies>
